DrawManager: Keep subset RenderMeshData around when geometry does not change. #88456

Closed
opened 2021-05-21 11:04:56 +02:00 by Jeroen Bakker · 4 comments
Member

RenderMeshData would be the same. during selection 30%-50% of the building time could be reduced as finding loose geometry isn't threaded but needed before any buffer can be constructed.

Master
Screenshot from 2021-05-21 13-34-26.png

Patch
Screenshot from 2021-05-21 13-36-12.png

RenderMeshData would be the same. during selection 30%-50% of the building time could be reduced as finding loose geometry isn't threaded but needed before any buffer can be constructed. Master ![Screenshot from 2021-05-21 13-34-26.png](https://archive.blender.org/developer/F10133811/Screenshot_from_2021-05-21_13-34-26.png) Patch ![Screenshot from 2021-05-21 13-36-12.png](https://archive.blender.org/developer/F10133814/Screenshot_from_2021-05-21_13-36-12.png)
Author
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Author
Member
Added subscribers: @Jeroen-Bakker, @ArtemBataev, @easythrees, @machieb, @warcanin, @fclem, @GeorgiaPacific, @kioku, @JorgeBernalMartinez, @elias.andersson92, @TheRedWaxPolice, @JacobMerrill-1, @ideasman42
Jeroen Bakker changed title from DrawManager: Keep RenderMeshData around when geometry does not change. to DrawManager: Keep subset RenderMeshData around when geometry does not change. 2021-05-21 12:15:17 +02:00
Jeroen Bakker self-assigned this 2021-05-21 20:59:08 +02:00

This issue was referenced by 5f749a03ca

This issue was referenced by 5f749a03ca1d34296adc84fc251e15790f583021
Author
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#88456
No description provided.